Fix some minor overflow issues with post author

--- a/css/main.scss
+++ b/css/main.scss
@@ -1110,7 +1110,6 @@ a.white {
 .post-meta {
   margin: 5px 0 15px;
   line-height: 21px;
-  height: 20px;
   text-align: left;
   color: $gray;
   font-size: 14px;
@@ -1145,6 +1144,7 @@ a.white {
 .tag-os { background: #3aaa55; }
 
 .post-author {
+  line-height: 25px;
   opacity: .4;
 }
 
@@ -1154,7 +1154,7 @@ a.white {
   margin-right: 5px;
   background: url(../img/profile2.jpg) 58% 30% no-repeat;
   background-size: 150%;
-  vertical-align: bottom;
+  vertical-align: text-bottom;
   height: 20px;
   width: 20px;
 }
